fix aside and nav_main with z-index

--- a/BookShop/css/style.css
+++ b/BookShop/css/style.css
@@ -36,9 +36,17 @@ img {
   box-sizing: content-box; }
 
 .container {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   width: 90%;
   margin: 0 auto;
-  min-width: 200px; }
+  min-width: 200px;
+  position: relative; }
+  @media (max-width: 860px) {
+    .container {
+      width: 100%;
+      padding: 0 1em; } }
 
 .wrapper {
   position: relative;
@@ -91,7 +99,7 @@ main {
   background-image: -moz-radial-gradient(cover, #ececec, #fff);
   background-image: -o-radial-gradient(cover, #ececec, #fff);
   background-image: radial-gradient(cover, #ececec, #fff); }
-  @media (max-width: 745px) {
+  @media (max-width: 860px) {
     main {
       display: block;
       width: 100%; } }
@@ -235,6 +243,7 @@ header .nav_main {
   @media (max-width: 745px) {
     header .nav_main {
       position: absolute;
+      z-index: 9;
       width: 100%;
       padding: 0;
       overflow: hidden;
@@ -329,14 +338,15 @@ header .nav_btn_mobile {
     background-image: radial-gradient(cover, #ececec, #fff);
     -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 2px 10px rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 2px 10px rgba(0, 0, 0, 0.5); }
-    @media (max-width: 745px) {
+    @media (max-width: 860px) {
       .aside_nav .vertical_word {
         display: block; } }
-  @media (max-width: 745px) {
+  @media (max-width: 860px) {
     .aside_nav {
       transition: all 0.3s;
-      position: fixed;
-      top: 200px;
+      position: absolute;
+      z-index: 10;
+      top: 0;
       left: -150px;
       width: 150px; }
       .aside_nav.visible {
