--- a/BookShop/scss/_aside.scss
+++ b/BookShop/scss/_aside.scss
@@ -54,14 +54,15 @@
 		text-align: center;
 		@include radial-gradient(cover, $bg-gradient, $bg-nav);
 		@include box-shadow(inset 0 1px rgba(white, .3), inset 0 0 1px 1px rgba(white, .1), 0 2px 10px rgba(black, .5));
-		@media(max-width: 745px){
+		@media(max-width: 860px){
 			display: block;
 		}
 	}
-	@media(max-width: 745px){
+	@media(max-width: 860px){
 		transition: all 0.3s;
-		position: fixed;
-		top: 200px;
+		position: absolute;
+		z-index: 10;
+		top: 0;
 		left: -150px;
 		width: 150px;
 		&.visible{
