--- a/BookShop/scss/_header.scss
+++ b/BookShop/scss/_header.scss
@@ -155,6 +155,7 @@ header{
 			}
 			@media(max-width: 745px){
 				position: absolute;
+				z-index: 9;
 				width: 100%;
 				padding: 0;
 				li{
