--- a/BookShop/scss/_main.scss
+++ b/BookShop/scss/_main.scss
@@ -35,9 +35,15 @@ img{
 	box-sizing: content-box;
 }
 .container{
+	@include box-sizing(border-box);
 	width: 90%;
 	margin: 0 auto;
 	min-width: 200px;
+	position: relative;
+	@media(max-width: 860px){
+		width: 100%;
+		padding: 0 1em;
+	}
 }
 .wrapper{
 	position: relative;
@@ -79,7 +85,7 @@ main{
 	@include box-shadow(inset 0 1px rgba(white, .3), inset 0 0 1px 1px rgba(white, .1), 0 2px 10px rgba(black, .5));
 	@include box-sizing(border-box);
 	@include radial-gradient(cover, $bg-gradient, $bg-nav);
-	@media(max-width: 745px){
+	@media(max-width: 860px){
 		display: block;
 		width: 100%;
 	}
